--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2024"
 [dependencies]
 axum = "0.8"
 tokio = { version = "1", features = ["full"] }
-redis = { version = "0.24", features = ["tokio-comp"] }
+redis = { version = "0.32.2", features = ["tokio-comp"] }
+deadpool-redis = { version = "0.21.1", features = ["rt_tokio_1"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 async-trait = "0.1"
