Add API key validation and rate limiting middleware with Redis support
- Introduced `ApiKeyLayer` and `ApiKeyMiddleware` for handling API key validation and rate limiting.
- Implemented `ApiKeyStore` trait with Redis and in-memory stores for key validation.
- Added examples for Redis setup and rate limit testing.
- Updated `Cargo.toml` to include `chrono` dependency for timestamp handling.
- Enhanced `BarnacleConfig` and related types for better configuration management.
- Removed unused `backoff` module to streamline the codebase.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ tower-service = "0.3"
 http-body-util = "0.1"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
+chrono = { version = "0.4", features = ["serde"] }
