Update package metadata and README for barnacle-rs
- Changed the Rust edition from 2024 to 2021 in `Cargo.toml`.
- Enhanced package metadata with a description, keywords, categories, and authors.
- Revised the README to clarify the functionality of the library, including new badges and a detailed features section.
- Updated the package name in the README from `barnacle` to `barnacle-rs` for consistency.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,24 @@
 [package]
 name = "barnacle-rs"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
+description = "Rate limiting middleware for Axum with Key Extractor and API key validation"
+readme = "README.md"
+license = "MIT"
+repository = "https://github.com/zyphelabs/barnacle-rs"
+homepage = "https://github.com/zyphelabs/barnacle-rs"
+keywords = [
+    "rate-limiting",
+    "axum",
+    "redis",
+    "middleware",
+    "api-key",
+    "web",
+    "http",
+]
+categories = ["web-programming::http-server", "asynchronous", "caching"]
+authors = ["Zyphe Inc <team@zyphe.com>"]
+rust-version = "1.70"
 
 [features]
 default = ["redis"]
