Update package metadata in Cargo.toml
- Consolidated keywords for better relevance and clarity.
- Removed unnecessary details from the authors field for simplicity.
- Maintained existing categories to ensure proper classification of the package.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,9 @@ readme = "README.md"
 license = "MIT"
 repository = "https://github.com/zyphelabs/barnacle-rs"
 homepage = "https://github.com/zyphelabs/barnacle-rs"
-keywords = [
-    "rate-limiting",
-    "axum",
-    "redis",
-    "middleware",
-    "api-key",
-    "web",
-    "http",
-]
+keywords = ["rate-limiting", "axum", "middleware", "api-key", "key-extractor"]
 categories = ["web-programming::http-server", "asynchronous", "caching"]
-authors = ["Zyphe Inc <team@zyphe.com>"]
+authors = ["Zyphe Inc"]
 rust-version = "1.70"
 
 [features]
